Improved responsiveness and prevented text overflow

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,8 @@ h1 {
 
 h2 {
     font-size: 2rem;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .emptymsg {
@@ -205,13 +207,19 @@ button:hover {
     border-radius: 5px;
     padding: 20px;
     margin: 20px;
+    max-width: 50%;
+    min-width: 100px;
+    overflow: hidden;
 }
 
 ul {
-    padding-left: 20px;
+    padding-left: 0px;
 }
 
 li {
     font-size: 1.5rem;
     margin-bottom: 5px;
+    list-style-position: inside;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
